// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`render polygon renders filter by polygon in middle of drawing 1`] = `
<div
  className="euiPopover euiPopover--anchorLeftUp"
  data-test-subj="drawShapePopOver"
  id="drawShapeId"
>
  <div
    className="euiPopover__anchor"
  >
    <div
      className="euiPanel euiPanel--borderRadiusMedium euiPanel--plain euiPanel--hasShadow spatialFilterToolbar__shape"
    >
      <button
        aria-label="draw_filter_shape"
        aria-pressed={true}
        className="euiButtonIcon euiButtonIcon--primary euiButtonIcon--fill euiButtonIcon--small spatialFilterToolbar__shapeButton"
        disabled={false}
        onClick={[Function]}
        title="Cancel"
        type="button"
      >
        <svg
          aria-hidden={true}
          className="euiIcon euiIcon--medium euiIcon--inherit euiButtonIcon__icon"
          focusable="false"
          height={16}
          role="img"
          style={null}
          viewBox="0 0 16 16"
          width={16}
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M12.5 11V5H11V3.5H5V5H3.5v6H5v1.5h6V11h1.5Zm1 0H15v4h-4v-1.5H5V15H1v-4h1.5V5H1V1h4v1.5h6V1h4v4h-1.5v6ZM4 4V2H2v2h2Zm8 0h2V2h-2v2ZM2 14h2v-2H2v2Zm10 0h2v-2h-2v2Z"
          />
        </svg>
      </button>
    </div>
  </div>
</div>
`;

exports[`render polygon renders filter by polygon option 1`] = `
<div
  className="euiPopover euiPopover--anchorLeftUp"
  data-test-subj="drawShapePopOver"
  id="drawShapeId"
>
  <div
    className="euiPopover__anchor"
  >
    <div
      className="euiPanel euiPanel--borderRadiusMedium euiPanel--plain euiPanel--hasShadow spatialFilterToolbar__shape"
    >
      <button
        aria-label="draw_filter_shape"
        aria-pressed={false}
        className="euiButtonIcon euiButtonIcon--primary euiButtonIcon--empty euiButtonIcon--small spatialFilterToolbar__shapeButton"
        disabled={false}
        onClick={[Function]}
        title="Draw Polygon"
        type="button"
      >
        <svg
          aria-hidden={true}
          className="euiIcon euiIcon--medium euiIcon--inherit euiIcon-isLoading euiButtonIcon__icon"
          focusable="false"
          height={16}
          role="img"
          style={null}
          viewBox="0 0 16 16"
          width={16}
          xmlns="http://www.w3.org/2000/svg"
        />
      </button>
    </div>
  </div>
</div>
`;

exports[`render rectangle renders filter by rectangle in middle of drawing 1`] = `
<div
  className="euiPopover euiPopover--anchorLeftUp"
  data-test-subj="drawShapePopOver"
  id="drawShapeId"
>
  <div
    className="euiPopover__anchor"
  >
    <div
      className="euiPanel euiPanel--borderRadiusMedium euiPanel--plain euiPanel--hasShadow spatialFilterToolbar__shape"
    >
      <button
        aria-label="draw_filter_shape"
        aria-pressed={true}
        className="euiButtonIcon euiButtonIcon--primary euiButtonIcon--fill euiButtonIcon--small spatialFilterToolbar__shapeButton"
        disabled={false}
        onClick={[Function]}
        title="Cancel"
        type="button"
      >
        <svg
          aria-hidden={true}
          className="euiIcon euiIcon--medium euiIcon--inherit euiButtonIcon__icon"
          focusable="false"
          height={16}
          role="img"
          style={null}
          viewBox="0 0 16 16"
          width={16}
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M12.5 11V5H11V3.5H5V5H3.5v6H5v1.5h6V11h1.5Zm1 0H15v4h-4v-1.5H5V15H1v-4h1.5V5H1V1h4v1.5h6V1h4v4h-1.5v6ZM4 4V2H2v2h2Zm8 0h2V2h-2v2ZM2 14h2v-2H2v2Zm10 0h2v-2h-2v2Z"
          />
        </svg>
      </button>
    </div>
  </div>
</div>
`;

exports[`render rectangle renders filter by rectangle option 1`] = `
<div
  className="euiPopover euiPopover--anchorLeftUp"
  data-test-subj="drawShapePopOver"
  id="drawShapeId"
>
  <div
    className="euiPopover__anchor"
  >
    <div
      className="euiPanel euiPanel--borderRadiusMedium euiPanel--plain euiPanel--hasShadow spatialFilterToolbar__shape"
    >
      <button
        aria-label="draw_filter_shape"
        aria-pressed={false}
        className="euiButtonIcon euiButtonIcon--primary euiButtonIcon--empty euiButtonIcon--small spatialFilterToolbar__shapeButton"
        disabled={false}
        onClick={[Function]}
        title="Draw Rectangle"
        type="button"
      >
        <svg
          aria-hidden={true}
          className="euiIcon euiIcon--medium euiIcon--inherit euiButtonIcon__icon"
          focusable="false"
          height={16}
          role="img"
          style={null}
          viewBox="0 0 16 16"
          width={16}
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M12.5 11V5H11V3.5H5V5H3.5v6H5v1.5h6V11h1.5Zm1 0H15v4h-4v-1.5H5V15H1v-4h1.5V5H1V1h4v1.5h6V1h4v4h-1.5v6ZM4 4V2H2v2h2Zm8 0h2V2h-2v2ZM2 14h2v-2H2v2Zm10 0h2v-2h-2v2Z"
          />
        </svg>
      </button>
    </div>
  </div>
</div>
`;
